--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 SECRET_KEY=django-insecure-5$bc15i^r_4w^_-(&$3ra)15-e@f$f-lptd=kw*&q)k-bl@ou(
 
-DB_NAME=habits
-DB_USER=postgres
-DB_PASSWORD=lenovo201
-DB_HOST=localhost
-DB_PORT=5432
+POSTGRES_DB=dogs
+POSTGRES_USER=alex
+POSTGRES_PASSWORD=mysecretpassword
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
 
 EMAIL_HOST=smtp.mail.ru
 EMAIL_PORT=465
