--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,69 +1,67 @@
-version: "3"
+version: '3.8'
 
 services:
-
-  redis:
-    image: redis:latest
-    restart: on-failure
-    expose:
-      - "6379"
-
-  db:
-    image: postgres:16-alpine
-    restart: on-failure
-    env_file:
-      - .env
-    expose:
-      - "5432"
-    volumes:
-        - pg_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
-      interval: 10s
-      retries: 5
-      timeout: 5s
-
   app:
-    build: .
-    tty: true
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8000:8000"
-    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
-    depends_on:
-      db:
-        condition: service_healthy
     volumes:
       - .:/app
-    env_file:
-        - .env
+    environment:
+      - DJANGO_SETTINGS_MODULE=config.settings
+      - PYTHONUNBUFFERED=1
+    depends_on:
+      - db
+      - redis
+
+  db:
+    image: postgres:16
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: app_db
+
+  redis:
+    image: redis:7.4-alpine
+    command: redis-server --requirepass redispass
+    environment:
+      REDIS_PASSWORD: redispass
+    ports:
+      - "6379:6379"
 
   celery:
-    build: .
-    tty: true
-    command: sh -c "celery -A config worker -l info"
-    restart: on-failure
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: celery -A config worker --loglevel=info
     volumes:
       - .:/app
+    environment:
+      - DJANGO_SETTINGS_MODULE=config.settings
+      - CELERY_BROKER_URL=redis://:redispass@redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://:redispass@redis:6379/0
     depends_on:
       - redis
       - db
-      - app
-    env_file:
-      - .env
 
   celery_beat:
-    build: .
-    tty: true
-    command: sh -c "celery -A config beat -l info"
-    restart: on-failure
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: celery -A config beat --loglevel=info
     volumes:
       - .:/app
+    environment:
+      - DJANGO_SETTINGS_MODULE=config.settings
+      - CELERY_BROKER_URL=redis://:redispass@redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://:redispass@redis:6379/0
     depends_on:
       - redis
       - db
-      - app
-    env_file:
-        - .env
 
 volumes:
   pg_data:
